<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Scary Maze</string>
    <string name="enter_name">Enter Your Name:</string>
    <string name="restart_game">Restart Game</string>
    <string name="start_game">Start Game</string>


    <!--tutorial-->
    <string name="welcome1_text">Welcome to Scary Maze Game.</string>
    <string name="welcome1_description1">This is not a real game, but a joke</string>
    <string name="welcome1_description2">that is suppose to scary the person who is playing.</string>
    <string name="tutorial_page_1">This is not real maze game. Please beware that this game scares player. This game records a video while player is playing.</string>
    <string name="tutorial_page_2">You can disable video recording in settings. To open game settings touch screen and wait until you see settings menu</string>
    <string name="tutorial_take_to_the_game_button">Take me to the game</string>
    <string name="tutorial_swipe_next">Next(swipe right)</string>

    <!--settings-->
    <string name="scary_maze_settings_activity_title">Settings</string>
    <string name="settings_link">Settings</string>
    <string name="settings_context_menu_text">Settings</string>

    <!--videos-->
    <string name="videos_menu_text">Videos</string>

    <!--game-->
    <string name="end_game_message">Sorry for scaring you… You can smile now:) you\'ve accomplished the game:) Check videos by touching screen and holding until you see menu.</string>
    <string name="game_end_close_button">Close</string>



    <string name="continue_game">Continue</string>
    <string name="well_done_continue_text">Well Done!</string>
    <string name="failed_label">Failed :(</string>
    <string name="try_again_button">Try Again</string>
    <string name="restart_button">Restart</string>
    <string name="videos_list">Videos List</string>
    <string name="play_again">Play Again</string>
</resources>