<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="20dp"
              android:background="@drawable/start_game_custom_background"
              android:layout_centerHorizontal="true"
              android:gravity="center"
              android:id="@+id/gameContinuePanel">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/well_done_continue_text"
            android:id="@+id/continueText" android:layout_gravity="center_horizontal"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continue_game"
                android:id="@+id/continueGameButton"
                android:layout_gravity="center_horizontal"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restart_button"
                android:id="@+id/restartGameButton"/>
    </LinearLayout>

</LinearLayout>