<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="20dp"
              android:background="@drawable/start_game_custom_background"
              android:layout_centerHorizontal="true"
              android:gravity="center"
              android:visibility="gone"
              android:id="@+id/gameStartPanel"
        >
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="fill_parent" android:gravity="center_horizontal">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/enter_name"
                android:id="@+id/name"/>
        <EditText
                android:layout_width="wrap_content"
                android:width="80pt"
                android:layout_height="wrap_content"
                android:id="@+id/userName"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_game"
                android:id="@+id/startGameButton"
                android:layout_gravity="center_vertical|right"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_link"
                android:id="@+id/settingsButton"
                android:layout_gravity="center_vertical|right"
                />
    </LinearLayout>

</LinearLayout>